--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Index</title>
+
+<title>Responsive Layout</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
-    <h1>Our Menu</h1>
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <section>
-                <h2 id="title1">Chicken</h2>
-                <p class="section_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita animi velit debitis, placeat quidem explicabo autem. Deleniti delectus necessitatibus laudantium quod, dolorum repellat, quis corporis explicabo animi vero porro incidunt.
-                Consequatur a cum expedita delectus similique. Iure eius quaerat soluta facilis in officiis animi aliquid excepturi, magni est repellendus nostrum velit, adipisci suscipit perferendis voluptas? Nihil, illum.</p>
-                </section>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <section>
-                <h2 id="title2">Beef</h2>
-                <p class="section_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus asperiores saepe suscipit alias cumque et quasi! Voluptates sequi officiis fuga nesciunt? Rerum, natus! Perspiciatis quasi illo deleniti asperiores nisi hic?
-                Architecto rem provident, nam dquisquam corporis blanditiis perferendis ipsum tempora molestias, iure nisi iste et ratione dolor consequatur vitae. Quam velit sit sed asperiores illo amet esse iste?
-                it alias quo.</p>
-            </section>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <section>
-                <h2 id="title3">Sushi</h2>
-                <p class="section_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quaerat blanditiis sed iusto rerum consequuntur ipsum voluptatibus voluptatem magnam, laudantium soluta aut quam labore commodi illo hic rem vero esse!
-                Riciis error, sapiente laborum doloribus impedit. Expedita numquam neque a dolore vitae? Dignissimos, deserunt dolore? Cupiditate reiciendis ea quod aliquid nam! Quod quidem recusandae quam. Alias!</p>
-            </section>
-        </div>
-    </div>
-    
+<h1>Our Menu</h1>
+
+
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="box">
+  		<p class="content-name name1">Chicken</p>
+  		<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  	</div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="box">
+   		<p class="content-name name2">Beef</p>
+   		<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  	</div>
+  </div>
+
+  <div class="col-lg-4 col-md-12 col-sm-12">
+  	<div class="box">
+  		<p class="content-name name3">Sushi</p>
+  		<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  	</div>	
+  </div>
+
 </body>
 </html>
